--- a/app/src/main/res/layout/team_stats_tab_overview.xml
+++ b/app/src/main/res/layout/team_stats_tab_overview.xml
@@ -21,7 +21,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="goToOverviewTS"
-                android:text="Overview" />
+                android:text="Overview"
+                android:textStyle="bold"/>
 
             <Button
                 android:id="@+id/teamStatGameButton"
