--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#aed581" />
+            <solid android:color="#ffc400" />
         </shape>
     </item>
     <item android:left="3dp" android:right="3dp"  android:top="3dp"  android:bottom="3dp" >
         <shape android:shape="rectangle">
-            <solid android:color="#aed581" />
+            <solid android:color="#ffffff" />
         </shape>
     </item>
 </layer-list>
