--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:left="3dp" android:right="3dp"  android:top="3dp"  android:bottom="3dp" >
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="#ffc400" />
         </shape>
     </item>
 </layer-list>
