--- a/app/src/main/res/layout/my_game_stats_activity.xml
+++ b/app/src/main/res/layout/my_game_stats_activity.xml
@@ -86,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/homeBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
+                android:onClick="onHomeButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
 
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/noticesBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
+                android:onClick="onNoticeButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
@@ -118,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profileBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
+                android:onClick="onProfileButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
@@ -132,7 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/logBarButton"
-                android:src="@drawable/ic_note_add_black_48dp"
+                android:onClick="onLogButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
 
