--- a/app/src/main/res/layout/my_sc_stats_activity.xml
+++ b/app/src/main/res/layout/my_sc_stats_activity.xml
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/homeBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
+                android:onClick="onHomeButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
 
@@ -117,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/noticesBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
+                android:onClick="onNoticeButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
@@ -133,7 +133,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profileBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
+                android:onClick="onProfileButtonClick"
                 android:tint="#ffc400"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
@@ -147,9 +147,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/logBarButton"
-                android:src="@drawable/ic_note_add_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onLogButtonClick"/>
 
         </LinearLayout>
 
