--- a/app/src/main/res/layout/my_stats_activity.xml
+++ b/app/src/main/res/layout/my_stats_activity.xml
@@ -228,9 +228,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/homeBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onHomeButtonClick"/>
 
 
         </LinearLayout>
@@ -244,9 +244,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/noticesBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onNoticeButtonClick"/>
         </LinearLayout>
 
 
@@ -260,9 +260,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profileBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onProfileButtonClick"/>
         </LinearLayout>
 
         <LinearLayout
@@ -274,9 +274,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/logBarButton"
-                android:src="@drawable/ic_note_add_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onLogButtonClick"/>
 
         </LinearLayout>
 
