--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -134,9 +134,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/homeBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onHomeButtonClick"/>
 
 
         </LinearLayout>
@@ -150,9 +150,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/noticesBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onNoticeButtonClick"/>
         </LinearLayout>
 
 
@@ -166,9 +166,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profileBarButton"
-                android:src="@drawable/ic_chat_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onProfileButtonClick"/>
         </LinearLayout>
 
         <LinearLayout
@@ -180,9 +180,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/logBarButton"
-                android:src="@drawable/ic_note_add_black_48dp"
                 android:tint="#ffc400"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:onClick="onLogButtonClick"/>
 
         </LinearLayout>
 
