--- a/app/src/main/res/layout/notice_activity.xml
+++ b/app/src/main/res/layout/notice_activity.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_below="@+id/input_text_view">
+        android:layout_below="@+id/notices_title">
 
 
         <LinearLayout
