--- a/app/src/main/res/layout/my_stats_activity.xml
+++ b/app/src/main/res/layout/my_stats_activity.xml
@@ -12,7 +12,7 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/statsandlogstitle"
         android:textSize="20sp"
-        android:paddingBottom="20dp"
+        android:paddingBottom="10dp"
         android:padding="10dp"
         />
 
@@ -22,14 +22,14 @@
         android:id="@+id/linearlayout"
         android:layout_below="@+id/statsandlogstitle"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="15dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/scStatsLayout"
-
-
+            android:background="@drawable/divlight"
+            android:padding="5dp"
             >
 
             <TextView
@@ -114,19 +114,23 @@
         </RelativeLayout>
 
 
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"
+            android:orientation="vertical"></LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/gameStatsLayout"
+            android:padding="5dp"
+            android:background="@drawable/divlight"
             >
 
             <TextView
                 android:id="@+id/gameSubTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
                 android:text="Game Statistics"
                 android:textSize="20sp"
 
@@ -180,20 +184,21 @@
                 android:orientation="vertical"
                 >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-
-                <ImageView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/gameFeedbackIV"
-                    android:src="@drawable/ic_feedback_black_48dp"
-                    android:layout_gravity="center_horizontal"/>
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal"
+                    >
 
-            </LinearLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/gameFeedbackIV"
+                        android:src="@drawable/ic_feedback_black_48dp"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -216,7 +221,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonBarLayout"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/black">
+        android:background="@android:color/black"
+        android:paddingTop="5dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -234,6 +240,11 @@
 
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"
+            android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
